--- a/practice006.html
+++ b/practice006.html
@@ -49,6 +49,7 @@
     <h2>問題文</h2>
     <p>BMI は、「 10000 × 体重[kg] ÷（身長[cm] の 2 乗）」で求めます。</p>
     <p>身長と体重を整数で入力してもらい、そこから BMI を計算して、18.5 以上 25 未満であれば『適正』、そうでなければ『適正外』と表示するプログラムを書きましょう。</p>
+    <p>なお、入力は「身長」→「体重」の順番で入力させてください。（逆の順番では確認プログラムが正しく動作しません。）</p>
 
     <pre id="testcase1_input"  class="testcase">160
 60</pre>
