実習10Bを修正

--- a/practice010b.html
+++ b/practice010b.html
@@ -60,6 +60,9 @@
     <pre id="testcase3_input"  class="testcase">291 628 425 658 768 419 478 273 712 883 104 486 528 600 628 329 503 267 380 363 675 676 955 984 995 840 319 746 529 973</pre>
     <pre id="testcase3_output" class="testcase">10</pre>
 
+    <pre id="testcase4_input"  class="testcase">1 599 912 634 709 762 826 386 218 722 105</pre>
+    <pre id="testcase4_output" class="testcase">0</pre>
+
     <textarea id="txt-editor"></textarea>
     <p>
       <!-- ↓ button#run は必ず用意 -->
