実習20説明を追加

--- a/practice020.html
+++ b/practice020.html
@@ -52,6 +52,7 @@
 
     <h2>問題文</h2>
     <p>数値データを扱うリストを入れると、そのリスト内の偶数の個数を数えて返す関数 <code>guusuu</code> を書いてみましょう。</p>
+    <p>※ 関数のみを書いてください。余計なものが書かれていると不正解にされる場合があります。</p>
     <p> </p>
     <pre id="testcase1_input"  class="testcase">599 912 634 709 762 826 386 218 722 105</pre>
     <pre id="testcase1_output" class="testcase">7</pre>
