問題番号を更新

--- a/practice014_1.html
+++ b/practice014_1.html
@@ -48,11 +48,11 @@ detaramename.seed(int(input()))
       // ↓ 正解時に実行する関数
       OnBrowserJudge.congratulations = () => { MicroModal.show("modal-1") }
     </script>
-    <title>実習14-1</title>
+    <title>実習15-1</title>
   </head>
 
   <body>
-    <h1>実習14-1</h1>
+    <h1>実習15-1</h1>
     <hr />
 
     <h2>問題文</h2>
@@ -87,6 +87,7 @@ detaramename.seed(int(input()))
           </header>
           <main class="modal__content" id="modal-1-content">
             <p class="cracker">🎉</p>
+            <p><a href="./practice014_2.html">実習 15-2 へ進む</a></p>
           </main>
           <footer class="modal__footer">
             <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">閉じる</button>
