--- a/practice020b.html
+++ b/practice020b.html
@@ -43,11 +43,11 @@
       // ↓ 正解時に実行する関数
       OnBrowserJudge.congratulations = () => { MicroModal.show("modal-1") }
     </script>
-    <title>実習20</title>
+    <title>実習14B</title>
   </head>
 
   <body>
-    <h1>実習20B</h1>
+    <h1>実習14B</h1>
     <hr />
 
     <h2>問題文</h2>
@@ -83,7 +83,7 @@
           </header>
           <main class="modal__content" id="modal-1-content">
             <p class="cracker">🎉</p>
-            <p><a href="./practice020c.html">実習 20C へ進む</a></p>
+            <p><a href="./practice020c.html">実習 14C へ進む</a></p>
           </main>
           <footer class="modal__footer">
             <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">閉じる</button>
