--- a/practice020c.html
+++ b/practice020c.html
@@ -43,11 +43,11 @@
       // ↓ 正解時に実行する関数
       OnBrowserJudge.congratulations = () => { MicroModal.show("modal-1") }
     </script>
-    <title>実習20</title>
+    <title>実習14C</title>
   </head>
 
   <body>
-    <h1>実習20</h1>
+    <h1>実習14C</h1>
     <hr />
 
     <h2>問題文</h2>
